# extract-software-repos

./: .gitignore  README.md  pyproject.toml
scripts/: benchmark.py  test_compatibility.py
src/extract_software_repos/: __init__.py  async_validators.py  checkpoint.py  cli.py  extraction.py  fast_validation.py  github_graphql.py  healing.py  paper_records.py  polars_extraction.py  processing.py  promotion.py  validation.py
src/extract_software_repos/heuristics/: __init__.py  arxiv_detection.py  author_matching.py  name_similarity.py
tests/: test_arxiv_detection.py  test_async_validators.py  test_author_matching.py  test_batch_promotion_integration.py  test_checkpoint.py  test_cli.py  test_extraction.py  test_fast_validation.py  test_github_graphql.py  test_github_graphql_promotion.py  test_healing.py  test_integration_validation.py  test_name_similarity.py  test_paper_records.py  test_parity.py  test_polars_extraction.py  test_processing.py  test_promotion.py  test_promotion_integration.py  test_validation.py  test_validation_utils.py
