[project]
name = "extract-software-repos"
version = "0.1.0"
description = "Extract and validate software repository URLs from text and DataCite records"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "polars>=1.0.0",
    "tqdm>=4.67.1",
    "ftfy>=6.0",
    "mdformat>=0.7",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pyarrow>=14.0.0",
]

[project.scripts]
extract-software-repos = "extract_software_repos.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extract_software_repos"]
